Split POSIXt methods into POSIXlt and POSIXct methods

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,24 +25,38 @@ Depends:
 Suggests:
     testthat
 Collate:
+    'time-zones.r'
+    'POSIXt.r'
+    'timespans.r'
     'accessors-day.r'
+    'accessors-dst.r'
     'accessors-hour.r'
     'accessors-minute.r'
-    'accessors-misc.r'
     'accessors-month.r'
     'accessors-second.r'
     'accessors-tz.r'
     'accessors-week.r'
     'accessors-year.r'
+    'am-pm.r'
     'coercion.r'
+    'Dates.r'
+    'decimal-dates.r'
+    'difftimes.r'
     'durations.r'
     'epochs.r'
     'help.r'
+    'instants.r'
     'intervals.r'
-    'ops.durations.r'
+    'leap-years.r'
+    'ops-addition.r'
+    'ops-division.r'
+    'ops-integer-division.r'
+    'ops-modulo.r'
+    'ops-multiplication.r'
+    'ops-subtraction.r'
     'parse.r'
     'periods.r'
     'pretty.r'
     'round.r'
+    'update.r'
     'util.r'
-    'zzz.r'
