--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,15 +38,30 @@ Collate:
     'accessors-week.r'
     'accessors-year.r'
     'am-pm.r'
-    'coercion.r'
-    'Dates.r'
-    'decimal-dates.r'
-    'difftimes.r'
+    'numeric.r'
+    'periods.r'
+    'intervals.r'
     'durations.r'
+    'difftimes.r'
+    'Dates.r'
+    'utilities.r'
+    'POSIXt.r
+    Convert
+    every
+    date
+    method
+    we
+    know
+    about
+    to
+    POSIXlt
+    and
+    POSIXct'
+    'coercion.r'
+    'decimal-dates.r'
     'epochs.r'
     'help.r'
     'instants.r'
-    'intervals.r'
     'leap-years.r'
     'ops-addition.r'
     'ops-division.r'
@@ -55,8 +70,8 @@ Collate:
     'ops-multiplication.r'
     'ops-subtraction.r'
     'parse.r'
-    'periods.r'
     'pretty.r'
     'round.r'
     'update.r'
     'util.r'
+    'data.r'
