--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,24 +1,3 @@
-S3method("%%",difftime)
-S3method("%%",duration)
-S3method("%%",interval)
-S3method("%%",period)
-S3method("%/%",difftime)
-S3method("%/%",duration)
-S3method("%/%",interval)
-S3method("%/%",period)
-S3method("*",duration)
-S3method("*",interval)
-S3method("*",period)
-S3method("+",duration)
-S3method("+",interval)
-S3method("+",period)
-S3method("-",duration)
-S3method("-",interval)
-S3method("-",period)
-S3method("/",duration)
-S3method("/",interval)
-S3method("/",period)
-S3method("[",interval)
 S3method(as.POSIXct,fts)
 S3method(as.POSIXct,irts)
 S3method(as.POSIXct,its)
@@ -34,32 +13,22 @@ S3method(as.POSIXlt,xts)
 S3method(as.POSIXlt,zoo)
 S3method(as.duration,default)
 S3method(as.duration,difftime)
-S3method(as.duration,interval)
-S3method(as.duration,period)
 S3method(as.period,default)
 S3method(as.period,difftime)
-S3method(as.period,duration)
-S3method(as.period,interval)
 S3method(c,difftime)
-S3method(c,duration)
-S3method(c,interval)
-S3method(c,period)
 S3method(decimal_date,default)
 S3method(decimal_date,its)
 S3method(decimal_date,zoo)
 S3method(dst,default)
-S3method(format,duration)
-S3method(format,interval)
-S3method(format,period)
+S3method(format,Duration)
+S3method(format,Interval)
+S3method(format,Period)
 S3method(hour,default)
 S3method(mday,default)
 S3method(minute,default)
 S3method(month,default)
 S3method(months,integer)
 S3method(months,numeric)
-S3method(print,duration)
-S3method(print,interval)
-S3method(print,period)
 S3method(reclass_date,Date)
 S3method(reclass_date,POSIXct)
 S3method(reclass_date,POSIXlt)
@@ -67,9 +36,7 @@ S3method(reclass_date,chron)
 S3method(reclass_date,its)
 S3method(reclass_date,ti)
 S3method(reclass_date,timeDate)
-S3method(rep,duration)
-S3method(rep,interval)
-S3method(rep,period)
+S3method(reclass_timespan,difftime)
 S3method(second,default)
 S3method(tz,default)
 S3method(tz,irts)
@@ -82,9 +49,12 @@ S3method(wday,default)
 S3method(wday,numeric)
 S3method(yday,default)
 S3method(year,default)
+export("%--%")
+export("%within%")
 export("day<-")
 export("hour<-")
 export("int_end<-")
+export("int_overlaps")
 export("int_start<-")
 export("mday<-")
 export("minute<-")
@@ -95,8 +65,8 @@ export("wday<-")
 export("week<-")
 export("yday<-")
 export("year<-")
-export(add_dates)
 export(am)
+export(as.difftime)
 export(as.duration)
 export(as.interval)
 export(as.period)
@@ -118,6 +88,7 @@ export(dnanoseconds)
 export(dpicoseconds)
 export(dseconds)
 export(dst)
+export(duration)
 export(dweeks)
 export(dyears)
 export(dym)
@@ -138,7 +109,11 @@ export(hms)
 export(hour)
 export(hours)
 export(int_end)
+export(int_flip)
+export(int_shift)
 export(int_start)
+export(intersect)
+export(interval)
 export(is.Date)
 export(is.POSIXct)
 export(is.POSIXlt)
@@ -173,6 +148,8 @@ export(new_period)
 export(now)
 export(origin)
 export(parse_date)
+export(period)
+export(period_to_seconds)
 export(picoseconds)
 export(pm)
 export(pretty.dates)
@@ -185,12 +162,14 @@ export(pretty.sec)
 export(pretty.unit)
 export(pretty.year)
 export(reclass_date)
+export(reclass_timespan)
 export(round_date)
 export(second)
 export(seconds)
-export(subtract_dates)
+export(setdiff)
 export(today)
 export(tz)
+export(union)
 export(w)
 export(wday)
 export(week)
@@ -209,5 +188,30 @@ export(ymdThms)
 export(ymd_h)
 export(ymd_hm)
 export(ymd_hms)
+exportClasses(Duration)
+exportClasses(Interval)
+exportClasses(Period)
+exportMethods("$")
+exportMethods("$<-")
+exportMethods("%%")
+exportMethods("%/%")
+exportMethods("%within%")
+exportMethods("*")
+exportMethods("+")
+exportMethods("-")
+exportMethods("/")
+exportMethods("[")
+exportMethods("[<-")
+exportMethods(as.difftime)
+exportMethods(as.duration)
+exportMethods(as.numeric)
+exportMethods(as.period)
+exportMethods(c)
+exportMethods(intersect)
+exportMethods(reclass_timespan)
+exportMethods(rep)
+exportMethods(setdiff)
+exportMethods(show)
+exportMethods(union)
 import(plyr)
 import(stringr)
