Added depends:methods to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,8 @@ Collate:
     'difftimes.r'
     'Dates.r'
     'coercion.r'
-    'ops-addition.R'
-    'ops-division.R'
+    'ops-addition.r'
+    'ops-division.r'
     'ops-integer-division.r'
     'ops-modulo.r'
     'ops-multiplication.r'
