Middle of dicumenting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ S3method(as.POSIXlt,xts)
 S3method(as.POSIXlt,zoo)
 S3method(as.duration,default)
 S3method(as.duration,difftime)
+S3method(as.duration,numeric)
 S3method(as.period,default)
 S3method(as.period,difftime)
-S3method(c,difftime)
 S3method(decimal_date,default)
 S3method(decimal_date,its)
 S3method(decimal_date,zoo)
@@ -71,7 +71,6 @@ export(as.duration)
 export(as.interval)
 export(as.period)
 export(ceiling_date)
-export(d)
 export(day)
 export(days)
 export(ddays)
@@ -126,7 +125,6 @@ export(is.period)
 export(is.timepoint)
 export(is.timespan)
 export(leap_year)
-export(m)
 export(make_difftime)
 export(mday)
 export(mdy)
@@ -170,12 +168,10 @@ export(setdiff)
 export(today)
 export(tz)
 export(union)
-export(w)
 export(wday)
 export(week)
 export(weeks)
 export(with_tz)
-export(y)
 export(yday)
 export(ydm)
 export(ydm_h)
@@ -191,6 +187,7 @@ export(ymd_hms)
 exportClasses(Duration)
 exportClasses(Interval)
 exportClasses(Period)
+exportClasses(Timespan)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("%%")
