Cleaning up. Also fixed typos in test-ops-addition file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(as.POSIXlt,timeSeries)
 S3method(as.POSIXlt,tis)
 S3method(as.POSIXlt,xts)
 S3method(as.POSIXlt,zoo)
+S3method(c,POSIXct)
 S3method(decimal_date,default)
 S3method(decimal_date,its)
 S3method(decimal_date,zoo)
