Added methods to ops-modulo and changed other ops files to reflect three rules: 1) durations and periods cannot be combined with an operation .The user must explicitly use as.duration or as.period. 2) durations and periods cannot be combined with on interval in an operation. To manipulate an interval, users should use on of the int_ functions. 3) Arithmetic cannot be performed on two interval objects. Users must use set operations.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,10 @@ export("%--%")
 export("%within%")
 export("day<-")
 export("hour<-")
+export("int_aligns")
 export("int_end<-")
 export("int_overlaps")
+export("int_standardize")
 export("int_start<-")
 export("mday<-")
 export("minute<-")
