Pushing changes to namespace, collate, and documentation that follow from today's commits.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,11 @@ exportMethods("*")
 exportMethods("+")
 exportMethods("-")
 exportMethods("/")
+exportMethods("<")
+exportMethods("<=")
+exportMethods("==")
+exportMethods(">")
+exportMethods(">=")
 exportMethods("[")
 exportMethods("[<-")
 exportMethods(as.difftime)
