Added missing != methods for Periods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,6 +185,7 @@ exportClasses(Duration)
 exportClasses(Interval)
 exportClasses(Period)
 exportClasses(Timespan)
+exportMethods("!=")
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("%%")
