changed pretty.dates to pretty_dates to prevent R from expecting an S3 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,7 +147,6 @@ export(period)
 export(period_to_seconds)
 export(picoseconds)
 export(pm)
-export(pretty.dates)
 export(pretty.day)
 export(pretty.hour)
 export(pretty.min)
@@ -156,6 +155,7 @@ export(pretty.point)
 export(pretty.sec)
 export(pretty.unit)
 export(pretty.year)
+export(pretty_dates)
 export(reclass_date)
 export(reclass_timespan)
 export(round_date)
