Fixed outdated documentation for seconds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export("%within%")
 export("day<-")
 export("hour<-")
 export("int_aligns")
+export("int_diff")
 export("int_end<-")
 export("int_overlaps")
 export("int_standardize")
