--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ export(is.period)
 export(is.timepoint)
 export(is.timespan)
 export(leap_year)
+export(lubridate_formats)
 export(make_difftime)
 export(mday)
 export(mdy)
@@ -143,6 +144,7 @@ export(new_interval)
 export(new_period)
 export(now)
 export(origin)
+export(parseDateTime)
 export(parse_date)
 export(period)
 export(period_to_seconds)
