changes link in stamp() documentation from parseDateTime to parse_date_time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(eweeks)
 export(eyears)
 export(floor_date)
 export(force_tz)
+export(guess_formats)
 export(hm)
 export(hms)
 export(hour)
@@ -144,8 +145,8 @@ export(new_interval)
 export(new_period)
 export(now)
 export(origin)
-export(parseDateTime)
 export(parse_date)
+export(parse_date_time)
 export(period)
 export(period_to_seconds)
 export(picoseconds)
@@ -165,6 +166,9 @@ export(round_date)
 export(second)
 export(seconds)
 export(setdiff)
+export(stamp)
+export(stamp_date)
+export(stamp_time)
 export(today)
 export(tz)
 export(union)
