edited .get_loc_regs to use memoise and avoid saving to a cache (R CMD check did not like)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: lubridate
 Imports:
     plyr,
-    stringr
+    stringr,
+    memoise
 Maintainer: Garrett Grolemund <grolemund@rice.edu>
 License: GPL
 Title: Make dealing with dates a little easier
