Edited [<- method for Periods to allow correct assignment to periods within vectors and data.frames new method replaces all attributes of a period. Previous method just replaced seconds value. Fixes #119.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,6 @@ export("week<-")
 export("yday<-")
 export("year<-")
 export(am)
-export(as.difftime)
 export(as.duration)
 export(as.interval)
 export(as.period)
@@ -110,7 +109,6 @@ export(int_end)
 export(int_flip)
 export(int_shift)
 export(int_start)
-export(intersect)
 export(interval)
 export(is.Date)
 export(is.POSIXct)
@@ -165,13 +163,11 @@ export(reclass_timespan)
 export(round_date)
 export(second)
 export(seconds)
-export(setdiff)
 export(stamp)
 export(stamp_date)
 export(stamp_time)
 export(today)
 export(tz)
-export(union)
 export(wday)
 export(week)
 export(weeks)
@@ -197,6 +193,7 @@ exportMethods("$")
 exportMethods("$<-")
 exportMethods("%%")
 exportMethods("%/%")
+exportMethods("%within%")
 exportMethods("*")
 exportMethods("+")
 exportMethods("-")
@@ -209,9 +206,12 @@ exportMethods(">=")
 exportMethods("[")
 exportMethods("[<-")
 exportMethods(as.difftime)
+exportMethods(as.duration)
 exportMethods(as.numeric)
+exportMethods(as.period)
 exportMethods(c)
 exportMethods(intersect)
+exportMethods(reclass_timespan)
 exportMethods(rep)
 exportMethods(setdiff)
 exportMethods(show)
