rewrote as.period.interval to take a units argument and return periods of units no bigger than the specified unit. Improved the way as,period.interval transforms negative intervals. Wrote int_length. Fixes #68.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(update,POSIXct)
 S3method(update,POSIXlt)
 S3method(wday,default)
 S3method(wday,numeric)
+S3method(xtfrm,Period)
 S3method(yday,default)
 S3method(year,default)
 export("%--%")
@@ -107,6 +108,7 @@ export(hour)
 export(hours)
 export(int_end)
 export(int_flip)
+export(int_length)
 export(int_shift)
 export(int_start)
 export(interval)
