Added richierocks' days_in_month function. Great idea and thanks for the tests! Fixes #118.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(as.period)
 export(ceiling_date)
 export(day)
 export(days)
+export(days_in_month)
 export(ddays)
 export(decimal_date)
 export(dhours)
