Wrote %m+% and %m-% for doing arithmetic with months withour rollover at the end of months. Fixes #133.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ S3method(xtfrm,Period)
 S3method(yday,default)
 S3method(year,default)
 export("%--%")
+export("%m+%")
+export("%m-%")
 export("%within%")
 export("day<-")
 export("hour<-")
@@ -163,6 +165,7 @@ export(pretty.year)
 export(pretty_dates)
 export(reclass_date)
 export(reclass_timespan)
+export(rollback)
 export(round_date)
 export(second)
 export(seconds)
@@ -196,6 +199,8 @@ exportMethods("$")
 exportMethods("$<-")
 exportMethods("%%")
 exportMethods("%/%")
+exportMethods("%m+%")
+exportMethods("%m-%")
 exportMethods("%within%")
 exportMethods("*")
 exportMethods("+")
