Wrote quarter accessor, which returns a date's quarter as a number.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,7 @@ export(pretty.sec)
 export(pretty.unit)
 export(pretty.year)
 export(pretty_dates)
+export(quarter)
 export(reclass_date)
 export(reclass_timespan)
 export(rollback)
